# huitzo-launcher

./: Cargo.toml  README.md  install.ps1  install.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  update-tap.yml
src/: dirs.rs  download.rs  errors.rs  exec.rs  install.rs  main.rs  manifest.rs  python.rs  update.rs  venv.rs
