[package]
name = "huitzo"
version = "0.2.7"
edition = "2024"
rust-version = "1.85"
description = "Huitzo CLI launcher — manages Python environment and execs into huitzo_cli"
license = "Proprietary"
repository = "https://github.com/Huitzo-Inc/huitzo-launcher"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
sha2 = "0.11"
dirs = "6"
which = "8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["process"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
